# AZX

./: .env.dev  .gitignore  README.md  compose.yml  main.py  pyproject.toml
client/: README.md  eslint.config.js  index.html  output.txt  package.json  pnpm-lock.yaml  vite.config.mjs
client/public/locales/en/: translation.json
client/scripts/: generate-types.js
client/src/: App.tsx  Router.tsx  i18n.ts  main.tsx
client/src/components/AppHeader/: AppHeader.module.css  AppHeader.tsx
client/src/components/ColorSchemeToggle/: ColorSchemeToggle.tsx
client/src/pages/: Home.page.tsx  PortfolioDetails.page.tsx  PortfolioDetailsInput.page.tsx  PortfolioFinalReview.page.tsx  PortfolioImport.page.tsx  PortfolioMapping.page.tsx  PortfolioReview.page.tsx  Root.shell.tsx
client/src/utils/: errors.ts
data/: portfolio1.csv  portfolio2.csv  portfolio3.csv
src/cli/: graph_cli.py
src/pfman/: Env.py  app.py  logging.py
src/pfman/graph/: Schema.py
src/pfman/models/: Address.py  GeocodingAttributes.py  User.py  __init__.py
src/pfman/routes/: __init__.py  api.py  auth.py  portfolio.py
src/pfman/utils/: geo.py  geocoding.py  neo4j.py  string.py
